<resources>
    <string name="app_name">Ref-U-Store</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Titles -->
    <string name="title_file_preview">Previewing File</string>
    <string name="caution">Caution</string>
    <string name="choose_file">Select a File to Upload</string>
    <string name="title_file_edit">Editing File</string>
    <string name="share">Share</string>
    <string name="title_activity_new_profile">NewProfile</string>
    <string name="upload_document">Upload a new Document!</string>
    <string name="take_a_picture">Take a Picture!</string>
    <string name="phone_upload">Upload from phone!</string>
    <string name="change_pass">Change Password:</string>
    <string name="enter_current_pass">Enter Current Password</string>

    <!-- Strings related to login and registration -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_to_healthport">Login to\nRef-U-Store</string>
    <string name="appName">Ref-U-Store</string>
    <string name="register_header">Sign Up for\nRef-U-Store</string>
    <string name="first_name_field">First Name</string>
    <string name="last_name_field">Last Name</string>
    <string name="email_field">Email Address</string>
    <string name="account_email">Account Email:</string>
    <string name="password_field">Password</string>
    <string name="confirm_password_field">Confirm Password</string>
    <string name="phone_field">Phone Number</string>
    <string name="account_phone">Account Phone:</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>

    <!-- Profile -->
    <string name="new_profile_header">Create a New\nProfile</string>
    <string name="dob_field">Date of Birth (DOB)</string>
    <string name="email">Email Address:</string>
    <string name="dob">Date of Birth (DOB):</string>
    <string name="back_button">Back</string>

    <!-- File Preview -->
    <string name="file_preview_screen_header">Editing File Details</string>
    <string name="pages_header">Pages</string>
    <string name="filepreview_profile_select_header">Assign to</string>
    <string name="filepreview_name_header">File Name</string>
    <string name="tags">Tags</string>
    <string name="page">Page</string>
    <string name="page_view_header">Viewing Page</string>
    <string name="add_page">+ Add</string>
    <string name="confirm_add">Document Created</string>
    <string name="confirm_upd">Document Updated</string>

    <!-- Notifications -->
    <string name="signup_in_progress">Trying to create account...</string>
    <string name="cancel_confirm">Are you sure you want to cancel?</string>
    <string name="signup_confirm">You\'re signed up for Ref-U-Store!</string>
    <string name="delete_confirm">Profile was successfully deleted.</string>
    <string name="page_delete_confirm">Are you sure you want to delete this page?</string>
    <string name="choice_confirm">Choose what to do:</string>
    <string name="edit_confirm">Are you sure you want to make these changes?</string>
    <string name="delete_doc_ask">Are you sure you want to delete this document?</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="loading_file">Loading file...</string>
    <string name="loading_link">Getting link...</string>
    <string name="link_label">Document link</string>
    <string name="copy_link_confirm">Copied link to clipboard</string>
    <string name="account_update_success">Account has been updated</string>
    <string name="account_update_failure">Failed to update account. Please try again</string>
    <string name="profile_update_success">Profile has been updated</string>
    <string name="profile_update_failure">Failed to update profile. Please try again</string>
    <string name="validating">Checking password...</string>

    <!-- Buttons -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login_text">Login</string>
    <string name="register_text">Sign Up</string>
    <string name="ok">OK</string>
    <string name="select_profile">Select a Profile</string>
    <string name="select_a_profile">Select a Profile</string>
    <string name="add_profile_button">+ Add Profile</string>
    <string name="create_button">Create</string>
    <string name="delete_button">Delete</string>
    <string name="pic_button">Take picture</string>
    <string name="up_button">Upload file</string>
    <string name="update_button">Update</string>
    <string name="copy">Copy</string>
    <string name="save">Save</string>

    <!--Menus-->
    <string name="edit">Edit Document</string>
    <string name="delete">Delete Document</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="switch_profile">Switch Profile</string>
    <string name="edit_account">Edit Account</string>
    <string name="logout">Log Out</string>

    <!-- Error messages -->
    <string name="email_not_valid">Email is not valid</string>
    <string name="phone_not_valid">Phone number is not valid</string>
    <string name="pass_not_matching">Passwords do not match</string>
    <string name="pass_not_long">Password must be greater than 8 characters</string>
    <string name="reg_failed">Sign up failed. Please try again.</string>
    <string name="email_exists">Sign up failed. Email already in use.</string>
    <string name="no_filename">Must give document a name.</string>
    <string name="file_exists">Document with this name already exists, please try another.</string>
    <string name="fields_empty">All fields are required</string>
    <string name="delete_warning">
        Warning! Deleting a profile will delete ALL documents assigned to it. Are you sure you want to delete?
    </string>
    <string name="delete_warning2">If so, enter the account password to delete profile.</string>
    <string name="incorrect_password">Wrong password, please try again.</string>
    <string name="failed_connection">Connection failed, please try again.</string>
    <string name="failed_delete">Failed to delete profile. Please try again</string>
    <string name="no_pages">Document must have at least one page.</string>
    <string name="no_file_manager">Please install a File Manager</string>
    <string name="perm_failed">Permissions must be granted to continue</string>
    <string name="doc_not_found">Could not find document</string>
    <string name="link_failed">Failed to create link...</string>
    <string name="default_empty">N/A</string>
    <string name="no_changes">No changes were given</string>
</resources>
