<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitiy.NewProfileActivity"
    android:background="@color/text_color">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="69dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="69dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="64dp"
        android:hint="@string/first_name_field"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newProfileText" />

    <TextView
        android:id="@+id/newProfileText"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_profile_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="69dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="69dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="25dp"
        android:hint="@string/last_name_field"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/dateOfBirth"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="69dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="69dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="25dp"
        android:hint="@string/dob_field"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <Button
        android:id="@+id/back"
        android:layout_marginBottom="15dp"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/rounded_button"
        android:textAllCaps="false"
        android:text="@string/back_button"
        android:onClick="goToProfileSelect"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />

    <Button
        android:id="@+id/done"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/rounded_button"
        android:textAllCaps="false"
        android:text="@string/done_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />

</android.support.constraint.ConstraintLayout>